--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -4,10 +4,23 @@
 
 <table class="table table-bordered">
   <thead>
-
+    <tr>
+      <% @people[0].each_key do |key| %>
+      <th>
+        <%= key %>
+      </th>
+      <% end %>
+    </tr>
   </thead>
-  <tbody>
-
-
+    <tbody>
+      <% @people.each do |person_hash| %>
+      <tr>
+        <% person_hash.each_value do |person_info| %>
+        <td>
+          <%= person_info %>
+        </td>
+        <% end %>
+      </tr>
+      <% end %>
   </tbody>
 </table>
