better variable names

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -5,9 +5,9 @@
 <table class="table table-bordered">
   <thead>
     <tr>
-      <% @people[0].each_key do |key| %>
+      <% @people[0].each_key do |header_info| %>
       <th>
-        <%= key %>
+        <%= header_info %>
       </th>
       <% end %>
     </tr>
